test/core/errors/builtin_types_error/zs/bitfield65_error.zs
package bitfield65_error;

struct WrongBitfield
{
    bit<65> wrong;
};
